overlay.js: added focusSearchInput() 	    added keycode stubs for Home and End thunderbirdOverlay.xul:	  added commands and keys for ctrl-j 			  cleaned up toolbarbutton 			  hacked in the (ctrl-j) text experimentaltoolbar.dtd:  added key for 'j', even though I wanted 'k' overlay.css:		  cleaned up the css for the toolbarbutton 			  started work on better bubbles

--- a/locale/en-US/experimentaltoolbar.dtd
+++ b/locale/en-US/experimentaltoolbar.dtd
@@ -1,1 +1,2 @@
-<!ENTITY experimentaltoolbar.label "Your localized menuitem">
+<!-- XXX I really wanted the "k" key, but it wasn't working for some reason -->
+<!ENTITY experimentaltoolbar.key "j">
